--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   audioplayers: ^0.14.2
   flare_flutter: ^2.0.1
+  shared_preferences: ^0.5.6+2
+  flutter_svg: ^0.17.4
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +39,8 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
+    - assets/image/botons/
+    - assets/image/dialogs/
     - assets/image/background/
     - assets/music/
     - assets/animations/
