--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  audioplayers: ^0.14.2
+  # audioplayers: ^0.14.2
   flare_flutter: ^2.0.1
   shared_preferences: ^0.5.6+2
   flutter_svg: ^0.17.4
@@ -39,8 +39,6 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - assets/image/botons/
-    - assets/image/dialogs/
     - assets/image/background/
     - assets/music/
     - assets/animations/
