--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.4
   # audioplayers: ^0.14.2
-  flare_flutter: ^2.0.1
-  shared_preferences: ^0.5.6+2
-  flutter_svg: ^0.17.4
+  flare_flutter: ^3.0.2
+  shared_preferences: ^2.0.13
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
