--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,7 +26,9 @@ dependencies:
   # audioplayers: ^0.14.2
   flare_flutter: ^3.0.2
   shared_preferences: ^2.0.13
+  flutter_layout_grid: ^1.0.3
   flutter_svg: ^1.0.3
+  
 
 dev_dependencies:
   flutter_test:
