--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flare_flutter: ^3.0.2
   shared_preferences: ^2.0.13
   flutter_layout_grid: ^1.0.3
+  flutter_launcher_icons: ^0.12.0
 
   flutter_svg_provider: ^1.0.3
   
