--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
-  # audioplayers: ^0.14.2
+  audioplayers: ^4.0.1
   flare_flutter: ^3.0.2
-  shared_preferences: ^2.0.13
-  flutter_layout_grid: ^1.0.3
+  shared_preferences: ^2.1.0
+  flutter_layout_grid: ^2.0.1
   flutter_launcher_icons: ^0.12.0
 
   flutter_svg_provider: ^1.0.3
@@ -68,6 +68,11 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
